--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1 id="header"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Blogger.svg/483px-Blogger.svg.png" id="headerimage"></h1>
   <br>
-  <input type="text" id="title" placeholder="type title here" size="50">
-  <br><br>
-  <textarea rows="15" cols="150" id="post" placeholder="Type Your Post Here"></textarea>
+  <input type="text" id="title" placeholder="type title here" size="50" class="placeholder">
+  <br>
+  <textarea rows="10" cols="150" id="post" placeholder="Type Your Post Here" class="placeholder"></textarea>
   <br><br>
   <button id="submit">Create Blog Post</button>
   <p id="invalid"></p>
